--- a/First_Angular_Project/src/app/app.component.html
+++ b/First_Angular_Project/src/app/app.component.html
@@ -1,3 +1,12 @@
 <app-header></app-header>
 <p>{{title}}</p>
 <h2>Hello world</h2>
+
+<div *ngFor="let x of menus">
+  <!-- <div *ngIf="x > 5"> -->
+    {{x.category}}
+    {{x.name}}
+    {{x.price}}
+  <!-- </div> -->
+
+</div>
