--- a/First_Angular_Project/src/app/app.component.html
+++ b/First_Angular_Project/src/app/app.component.html
@@ -2,11 +2,34 @@
 <p>{{title}}</p>
 <h2>Hello world</h2>
 
-<div *ngFor="let x of menus">
-  <!-- <div *ngIf="x > 5"> -->
-    {{x.category}}
-    {{x.name}}
-    {{x.price}}
-  <!-- </div> -->
 
-</div>
+<h2>All the Items</h2>
+  <table>
+    <tr>
+      <th>Category</th>
+      <th>Item Name</th>
+      <th>Price in $</th>
+    </tr>
+    <tr *ngFor="let x of menus">
+      <td>{{x.category}}</td>
+      <td>{{x.name}}</td>
+      <td>{{x.price}}</td>
+    </tr>
+  </table>
+  <!-- <div *ngIf="x.price < 5"> -->
+    <!-- {{x.category}} -->
+    <!-- {{x.name}} -->
+    <!-- {{x.price}} -->
+  <!-- </div> -->
+  <!-- <table>
+    <tr>
+      <th>Category</th>
+      <th>Item Name</th>
+      <th>Price in $</th>
+    </tr>
+    <tr *ngFor="let x of menus">
+      <td>{{x.category}}</td>
+      <td>{{x.name}}</td>
+      <td>{{x.price}}</td>
+    </tr>
+  </table> -->
