--- a/First_Angular_Project/src/app/app.component.html
+++ b/First_Angular_Project/src/app/app.component.html
@@ -1,35 +1,34 @@
 <app-header></app-header>
 <p>{{title}}</p>
 <h2>Hello world</h2>
+<br>
 
+<h2>All the Items ==></h2>
+<table>
+  <tr>
+    <th>Category</th>
+    <th>Item Name</th>
+    <th>Price in $</th>
+  </tr>
+  <tr *ngFor="let x of menus">
+    <td>{{x.category}}</td>
+    <td>{{x.name}}</td>
+    <td>{{x.price}}</td>
+  </tr>
+</table>
+<br>
 
-<h2>All the Items</h2>
-  <table>
-    <tr>
-      <th>Category</th>
-      <th>Item Name</th>
-      <th>Price in $</th>
-    </tr>
-    <tr *ngFor="let x of menus">
-      <td>{{x.category}}</td>
-      <td>{{x.name}}</td>
-      <td>{{x.price}}</td>
-    </tr>
-  </table>
-  <!-- <div *ngIf="x.price < 5"> -->
-    <!-- {{x.category}} -->
-    <!-- {{x.name}} -->
-    <!-- {{x.price}} -->
-  <!-- </div> -->
-  <!-- <table>
-    <tr>
-      <th>Category</th>
-      <th>Item Name</th>
-      <th>Price in $</th>
-    </tr>
-    <tr *ngFor="let x of menus">
-      <td>{{x.category}}</td>
-      <td>{{x.name}}</td>
-      <td>{{x.price}}</td>
-    </tr>
-  </table> -->
+<h2>Items whose price is more than 5$ ==></h2>
+<br>
+<table>
+  <tr>
+    <th>Category</th>
+    <th>Item Name</th>
+    <th>Price in $</th>
+  </tr>
+  <tr *ngFor="let x of menus">
+    <td *ngIf="x.price > 5">{{x.category}}</td>
+    <td *ngIf="x.price > 5">{{x.name}}</td>
+    <td *ngIf="x.price > 5">{{x.price}}</td>
+  </tr>
+</table>
